--- a/index.html
+++ b/index.html
@@ -1,142 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TEAMROHITOFFICAL45_LIVE</title>
-    <style>
-        /* General Page Styling */
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background: linear-gradient(135deg, #242424, #3b5998);
-            color: #fff;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            text-align: center;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Live Player</title>
+  <style>
+    body {
+      margin: 0;
+      background-color: #000; /* Black background */
+      color: #fff;            /* White text (optional) */
+      font-family: Arial, sans-serif;
+    }
 
-        /* Glowing Effect for Message */
-        .loading-message {
-            font-size: 18px;
-            font-weight: bold;
-            color: #ffcc00;
-            margin-bottom: 10px;
-            padding: 10px 20px;
-            border-radius: 10px;
-            background: rgba(255, 255, 255, 0.1);
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            text-align: center;
-            box-shadow: 0 0 10px #ffcc00, 0 0 20px #ffcc00, 0 0 30px #ffcc00;
-            animation: glow 1.5s infinite alternate;
-        }
+    .content {
+      padding: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
 
-        @keyframes glow {
-            0% {
-                box-shadow: 0 0 10px #ffcc00, 0 0 20px #ffcc00, 0 0 30px #ffcc00;
-            }
-            100% {
-                box-shadow: 0 0 15px #ffcc00, 0 0 25px #ffcc00, 0 0 35px #ffcc00;
-            }
-        }
+    .rwd-media {
+      position: relative;
+      width: 100%;
+      max-width: 900px;
+      aspect-ratio: 16 / 9;
+      background-color: #000; /* Optional black fallback */
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 0 15px rgba(255, 255, 255, 0.1);
+    }
 
-        /* Video Player Styling */
-        .player-container {
-            width: 95%;
-            max-width: 1200px;
-            margin: 20px auto;
-            box-shadow: 0 6px 25px rgba(0, 0, 0, 0.4);
-            border-radius: 15px;
-            overflow: hidden;
-            background: #000;
-        }
-
-        .player-container iframe {
-            border-radius: 15px;
-            width: 100%;
-            height: 100%;
-        }
-
-        /* Join Telegram Button */
-        .join-telegram-container {
-            margin-top: 20px;
-            text-align: center;
-        }
-
-        .join-telegram-btn {
-            padding: 10px 20px;
-            font-size: 16px;
-            font-weight: bold;
-            color: white;
-            background-color: #008fd6;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-        }
-
-        .join-telegram-btn:hover {
-            background-color: #006bb3;
-        }
-    </style>
+    .rwd-media iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+  </style>
 </head>
 <body>
-
-    <!-- Loading Message -->
-    <div class="loading-message">Share The Links With Your Friends</div>
-
-    <!-- Video Player Section -->
-    <div class="player-container">
-        <div style="padding:56.25% 0 0 0; position:relative;">
-            <div class="content">
-                <div class="rwd-media">
-                    <iframe
-                        id="contentFrame"
-                        name="frame"
-                        frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        loading="lazy"
-                        allowfullscreen
-                        sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation"
-                        style="position:absolute; top:0; left:0; width:100%; height:100%;"
-                    ></iframe>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Join Telegram Button -->
-    <div class="join-telegram-container">
-        <button
-            class="join-telegram-btn"
-            onclick="window.open('https://t.me/+IhSW51QysxU3NzY1', '_blank')"
-        >
-            Join Telegram Channel
-        </button>
-    </div>
-
-    <script>
-        // Get 'id' parameter from URL
-        const params = new URLSearchParams(window.location.search);
-        const streamUrl = params.get('id');
-
-        if (streamUrl) {
-            document.getElementById('contentFrame').src = streamUrl;
-        } else {
-            alert('Please provide a valid stream URL in the ?id= parameter.');
-        }
-
-        // Prompt to join Telegram once
-        if (
-            confirm('Join Our Telegram Channel TEAMROHITOFFICAL45_LIVE') === true
-        ) {
-            window.open('https://t.me/+IhSW51QysxU3NzY1', '_blank');
-        }
-    </script>
-
+  <div class="content">
+    <div class="rwd-media">
+      <iframe
+        name="TEAMROHITOFFICAL45_LIVE"
+        src="https://yourdomain.com/?id=TEAMROHITOFFICAL45_LIVE"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+        loading="lazy">
+      </iframe>
+    </div>
+  </div>
 </body>
 </html>
