--- a/index.html
+++ b/index.html
@@ -1,54 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Live Player</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>TEAMROHITOFFICIAL45_LIVE Player</title>
   <style>
     body {
-      margin: 0;
-      background-color: #000; /* Black background */
-      color: #fff;            /* White text (optional) */
       font-family: Arial, sans-serif;
+      margin: 20px;
+      background-color: #f4f4f4;
     }
 
     .content {
+      max-width: 800px;
+      margin: auto;
+      background: #fff;
       padding: 20px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
 
     .rwd-media {
       position: relative;
-      width: 100%;
-      max-width: 900px;
-      aspect-ratio: 16 / 9;
-      background-color: #000; /* Optional black fallback */
-      border-radius: 10px;
+      padding-bottom: 56.25%; /* 16:9 ratio */
+      height: 0;
       overflow: hidden;
-      box-shadow: 0 0 15px rgba(255, 255, 255, 0.1);
     }
 
     .rwd-media iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
+    }
+
+    .buttons {
+      margin-top: 20px;
+      text-align: center;
+    }
+
+    .buttons button {
+      margin: 5px;
+      padding: 10px 20px;
+      background-color: #0066cc;
+      color: white;
       border: none;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+
+    .buttons button:hover {
+      background-color: #004999;
     }
   </style>
 </head>
 <body>
+
   <div class="content">
+    <h2>TEAMROHITOFFICIAL45_LIVE Player</h2>
+
     <div class="rwd-media">
       <iframe
-        name="TEAMROHITOFFICAL45_LIVE"
-        src="https://yourdomain.com/?id=TEAMROHITOFFICAL45_LIVE"
+        name="TEAMROHITOFFICIAL45_LIVE"
+        id="TEAMROHITOFFICIAL45_LIVE"
+        frameborder="0"
+        src=""
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen
-        loading="lazy">
+        loading="lazy"
+        allowfullscreen>
       </iframe>
     </div>
+
+    <div class="buttons">
+      <button onclick="loadVideo('video1')">Load Video 1</button>
+      <button onclick="loadVideo('video2')">Load Video 2</button>
+      <button onclick="loadVideo('video3')">Load Video 3</button>
+    </div>
   </div>
+
+  <script>
+    function loadVideo(id) {
+      const iframe = document.getElementById("TEAMROHITOFFICIAL45_LIVE");
+      iframe.src = "https://yourdomain.com?ID=" + encodeURIComponent(id);
+    }
+  </script>
+
 </body>
 </html>
