--- a/index.html
+++ b/index.html
@@ -1,213 +1,340 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="description" content="ENJOY FREE LIVE">
-    <meta name="keywords" content="JIOTV, LIVETV, SPORTS, MOVIES, MUSIC">
-    <meta name="author" content="unknown">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>TEAMROHITOFFICAL45_LIVE</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>TEAMROHITOFFICAL45_LIVE</title>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
 
-    <link href="https://cdn.jsdelivr.net/npm/plyr@3.6.2/dist/plyr.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/plyr@3.6.12/dist/plyr.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/hls.js@1.1.4/dist/hls.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: #0e0e0e;
+      color: #fff;
+      font-family: 'Poppins', sans-serif;
+      cursor: url('https://cdn-icons-png.flaticon.com/512/892/892634.png') 16 16, auto;
+    }
 
-    <style>
-        html {
-            font-family: Poppins, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
+    header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 70px;
+      background: rgba(14, 14, 14, 0.9);
+      backdrop-filter: blur(12px);
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 20px;
+      z-index: 1000;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    }
 
-        body {
-            background: #000;
-            color: #fff;
-            position: relative;
-        }
+    .site-title {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      line-height: 1.1;
+    }
 
-        .loading {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: #000;
-            z-index: 9999;
-        }
+    .brand-main {
+      font-family: 'Oswald', sans-serif;
+      font-size: 20px;
+      font-weight: 700;
+      color: gold;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
 
-        .loading-text {
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            margin: auto;
-            text-align: center;
-            width: 100%;
-            height: 100px;
-            line-height: 100px;
-        }
+    .brand-sub {
+      font-size: 12px;
+      font-weight: 600;
+      color: #ffcc00;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+    }
 
-        .loading-text span {
-            display: inline-block;
-            margin: 0 5px;
-            color: #00b3ff;
-            font-family: 'Quattrocento Sans', sans-serif;
-        }
+    .material-symbols-outlined {
+      font-size: 30px;
+      color: #fff;
+      cursor: pointer;
+      transition: 0.3s;
+      font-family: 'Material Symbols Outlined';
+    }
 
-        .watermark {
-            position: absolute;
-            bottom: 2px;
-            right: 2px;
-            font-size: 8px;
-            color: rgba(255, 255, 255, 0.2);
-            font-style: italic;
-            pointer-events: none;
-            z-index: 10;
-            font-family: "Courier New", Courier, monospace;
-        }
+    .material-symbols-outlined:hover {
+      color: gold;
+    }
 
-        .telegram-button {
-            display: block;
-            margin: 20px auto;
-            padding: 6px 10px;
-            background-color: #0088cc;
-            color: #fff;
-            text-align: center;
-            font-size: 14px;
-            text-decoration: none;
-            border-radius: 5px;
-            width: 180px;
-            transition: background-color 0.3s ease;
-        }
+    .search-input {
+      position: absolute;
+      top: 100%;
+      right: 20px;
+      margin-top: 5px;
+      padding: 10px 20px;
+      border-radius: 25px;
+      background-color: rgba(255, 255, 255, 0.05);
+      border: 2px solid #ffcc00;
+      color: #fff;
+      outline: none;
+      width: 0;
+      opacity: 0;
+      transition: width 0.4s ease, opacity 0.4s ease;
+      font-size: 14px;
+    }
 
-        .telegram-button:hover {
-            background-color: #006a99;
-        }
+    .search-input.active {
+      width: 220px;
+      opacity: 1;
+      border-image: linear-gradient(90deg, gold, #ffcc00) 1;
+      animation: borderSearch 2s linear infinite;
+    }
 
-        iframe {
-            border: none;
-        }
+    @keyframes borderSearch {
+      0% { border-image-source: linear-gradient(90deg, gold, #ffcc00); }
+      50% { border-image-source: linear-gradient(270deg, gold, #ffcc00); }
+      100% { border-image-source: linear-gradient(90deg, gold, #ffcc00); }
+    }
 
-        .iframe-wrapper {
-            position: relative;
-            padding-top: 56.25%;
-            height: 0;
-            overflow: hidden;
-        }
+    .event-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      padding: 90px 20px 20px;
+    }
 
-        .iframe-wrapper iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
-    </style>
+    .event {
+      position: relative;
+      width: 360px;
+      background: linear-gradient(145deg, #1e1e1e, #292929);
+      border-radius: 16px;
+      overflow: hidden;
+      padding-bottom: 15px;
+      animation: heartbeat 5s infinite;
+      box-shadow: 0 0 8px rgba(255, 215, 0, 0.15);
+      transition: transform 0.3s, box-shadow 0.3s;
+      border: 1px solid rgba(255, 215, 0, 0.4);
+    }
+
+    .event:hover {
+      box-shadow: 0 0 15px rgba(255, 215, 0, 0.5), 0 0 30px rgba(255, 215, 0, 0.3);
+      transform: scale(1.04);
+    }
+
+    .event img {
+      width: 100%;
+      height: 220px;
+      object-fit: cover;
+      border-bottom: 1px solid rgba(255,255,255,0.1);
+    }
+
+    .event-content {
+      padding: 18px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    .teams {
+      font-family: 'Oswald', sans-serif;
+      font-size: 24px;
+      font-weight: 700;
+      color: #fff;
+      text-align: center;
+      text-transform: uppercase;
+    }
+
+    .league {
+      font-size: 13px;
+      text-align: center;
+      text-transform: uppercase;
+      background: linear-gradient(90deg, #FFFFFF, white);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      font-weight: 700;
+      letter-spacing: 0.8px;
+      text-shadow: 0 0 6px rgba(255, 215, 0, 0.3);
+      margin-bottom: 6px;
+    }
+
+    .time {
+      font-size: 12px;
+      color: #aaa;
+      text-align: center;
+    }
+
+    .btn-primary {
+      display: inline-block;
+      padding: 9px 18px;
+      background: linear-gradient(90deg, #ffcc00, gold);
+      color: #121212;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: bold;
+      box-shadow: 0 0 10px rgba(255, 215, 0, 0.4);
+      text-align: center;
+      transition: 0.3s;
+      margin-top: 5px;
+    }
+
+    .btn-primary:hover {
+      background: linear-gradient(90deg, gold, #ffcc00);
+      box-shadow: 0 0 15px rgba(255, 215, 0, 0.7);
+    }
+
+    .live-badge {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      background: red;
+      color: #fff;
+      padding: 3px 8px;
+      border-radius: 4px;
+      font-size: 12px;
+      font-weight: bold;
+      text-transform: uppercase;
+      box-shadow: 0 0 5px rgba(255,0,0,0.6);
+      z-index: 5;
+      animation: pulseLive 1.5s infinite;
+    }
+
+    @keyframes heartbeat {
+      0%, 100% { transform: scale(1); }
+      25%, 75% { transform: scale(1.02); }
+      50% { transform: scale(1); }
+    }
+
+    @keyframes pulseLive {
+      0%, 100% { box-shadow: 0 0 8px red; }
+      50% { box-shadow: 0 0 18px rgba(255, 0, 0, 0.8); }
+    }
+
+    .loader {
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: #0e0e0e;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 2000;
+      flex-direction: column;
+    }
+
+    .loader:before {
+      content: "";
+      width: 60px;
+      height: 60px;
+      border: 5px solid gold;
+      border-top: 5px solid transparent;
+      border-radius: 50%;
+      animation: spin 1.2s linear infinite;
+      margin-bottom: 15px;
+    }
+
+    .loader-text {
+      color: #fff;
+      font-family: 'Oswald', sans-serif;
+      font-size: 20px;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      animation: pulse 1.8s infinite;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
+    @keyframes pulse {
+      0%, 100% { opacity: 1; }
+      50% { opacity: 0.4; }
+    }
+  </style>
 </head>
 <body>
 
-    <!-- Loading Screen -->
-    <div class="loading" id="loading">
-        <div class="loading-text">
-            <span>T</span><span>E</span><span>A</span><span>M</span><span>R</span><span>O</span><span>H</span><span>I</span><span>T</span><span>O</span><span>F</span><span>F</span><span>I</span><span>C</span><span>I</span><span>A</span><span>L</span><span>4</span><span>5</span>
-        </div>
-    </div>
+<div class="loader" id="loader"><div class="loader-text">Loading...</div></div>
 
-    <!-- Media Container -->
-    <div id="media-container" style="position: relative; width: 100%; height: auto;">
-        <!-- HLS Video Player -->
-        <video id="player" autoplay controls crossorigin playsinline style="--plyr-color-main:#15b4ff; width: 100%; display: none;">
-            <source id="m3u8-url" src="" type="application/x-mpegURL">
-        </video>
+<header>
+  <div class="site-title">
+    <span class="brand-main">TEAMROHITOFFICAL45</span>
+    <span class="brand-sub">FEMCODE</span>
+  </div>
+  <span class="material-symbols-outlined" id="searchToggle">search</span>
+  <input type="text" class="search-input" id="searchInput" placeholder="Search match...">
+</header>
 
-        <!-- Iframe Player -->
-        <div class="iframe-wrapper" id="iframe-wrapper" style="display: none;">
-            <iframe id="iframe-player" 
-                    sandbox="allow-scripts allow-same-origin allow-presentation allow-top-navigation" 
-                    allow="encrypted-media" 
-                    allowfullscreen>
-            </iframe>
-        </div>
+<div class="event-container" id="events"></div>
 
-        <!-- Watermark -->
-        <div class="watermark">
-            𝙏𝙀𝘼𝙈𝙍𝙊𝙃𝙄𝙏𝙊𝙁𝙁𝙄𝘾𝙄𝘼𝙇𝟰𝟱
-        </div>
-    </div>
+<script>
+  async function fetchAvailableEvents() {
+    try {
+      const response = await fetch("https://github.com/drmlive/fancode-live-events/blob/main/fancode.json");
+      const data = await response.json();
+      window.allEvents = data.matches.filter(event => event.startTime);
+      displayEvents(window.allEvents);
+      document.getElementById("loader").style.display = "none";
+    } catch (error) {
+      console.error("Error fetching events:", error);
+      document.getElementById("loader").innerHTML = "<div class='loader-text'>Failed to load!</div>";
+    }
+  }
 
-    <!-- Telegram Button -->
-    <a href="https://t.me/+lkbpBqFd0FljNzJl" class="telegram-button" target="_blank">
-        Join Our Telegram Channel
-    </a>
+  function displayEvents(events) {
+    const container = document.getElementById("events");
+    container.innerHTML = "";
 
-    <!-- Script -->
-    <script>
-        const urlParams = new URLSearchParams(window.location.search);
-        const streamUrl = urlParams.get("id");
+    events.forEach(event => {
+      const videoLink = event.adfree_url || event.dai_url;
+      const hasStream = Boolean(videoLink);
+      const isLive = event.status && event.status.toLowerCase() === 'live';
+      const adfreeLink = event.adfree_url;
 
-        const videoEl = document.getElementById("player");
-        const sourceEl = document.getElementById("m3u8-url");
-        const iframeEl = document.getElementById("iframe-player");
-        const iframeWrapper = document.getElementById("iframe-wrapper");
+      const eventHTML = `
+        <div class="event">
+          ${hasStream && isLive ? `<div class="live-badge">LIVE</div>` : ""}
+          <img src="${event.src}" alt="${event.title}">
+          <div class="event-content">
+            <div class="teams">${event.team_1} vs ${event.team_2}</div>
+            <div class="league">${event.event_name}</div>
+            <div class="time">${event.startTime}</div>
+            ${hasStream 
+              ? `<a href="http://Teamro0045.free.nf/Teamrom3u8plyr.html?id=${videoLink}" target="_blank" class="btn-primary">Watch Now</a>` 
+              : `<span class="btn-primary" style="background:gray;cursor:default;opacity:0.6;">Coming Soon</span>`}
+            ${adfreeLink 
+              ? `<a href="https://Teamro45.fwh.is/Teamrom3u8newplyr.html?id=${adfreeLink}" target="_blank" class="btn-primary">Ad-Free</a>` 
+              : ""}
+          </div>
+        </div>`;
+      container.innerHTML += eventHTML;
+    });
+  }
 
-        // Hide loading screen
-        setTimeout(() => {
-            document.getElementById("loading").style.display = "none";
-        }, 1000);
+  document.getElementById("searchToggle").addEventListener("click", () => {
+    const input = document.getElementById("searchInput");
+    input.classList.toggle("active");
+    if (input.classList.contains("active")) {
+      input.focus();
+    } else {
+      input.value = "";
+      displayEvents(window.allEvents);
+    }
+  });
 
-        // Check and load stream
-        if (streamUrl && streamUrl.trim() !== "") {
-            if (streamUrl.endsWith(".m3u8")) {
-                // Show video player
-                sourceEl.src = streamUrl;
-                videoEl.style.display = "block";
+  document.getElementById("searchInput").addEventListener("input", e => {
+    const searchTerm = e.target.value.toLowerCase();
+    const filtered = window.allEvents.filter(event =>
+      (`${event.team_1} ${event.team_2} ${event.event_name}`.toLowerCase().includes(searchTerm))
+    );
+    displayEvents(filtered);
+  });
 
-                const posterURL = "https://i.postimg.cc/Y0918Y71/IMG-20240810-011453-139.jpg";
-                const img = new Image();
-                img.onload = () => videoEl.setAttribute("poster", posterURL);
-                img.onerror = () => videoEl.setAttribute("poster", "https://example.com/fallback-poster.jpg");
-                img.src = posterURL;
-
-                document.addEventListener("DOMContentLoaded", () => {
-                    const config = { maxMaxBufferLength: 100 };
-                    const plyrOptions = {};
-                    if (Hls.isSupported()) {
-                        const hls = new Hls(config);
-                        hls.loadSource(streamUrl);
-                        hls.attachMedia(videoEl);
-                        hls.on(Hls.Events.MANIFEST_PARSED, (event, data) => {
-                            const qualities = hls.levels.map(level => level.height);
-                            plyrOptions.quality = {
-                                default: qualities[0],
-                                options: qualities,
-                                forced: true,
-                                onChange: q => {
-                                    hls.levels.forEach((level, i) => {
-                                        if (level.height === q) {
-                                            hls.currentLevel = i;
-                                        }
-                                    });
-                                }
-                            };
-                            new Plyr(videoEl, plyrOptions);
-                        });
-                        window.hls = hls;
-                    } else {
-                        new Plyr(videoEl, plyrOptions);
-                    }
-                });
-            } else {
-                // Show iframe
-                iframeEl.src = streamUrl;
-                iframeWrapper.style.display = "block";
-            }
-        } else {
-            alert("Invalid or missing stream URL.");
-        }
-    </script>
+  fetchAvailableEvents();
+</script>
 
 </body>
 </html>
