--- a/index.html
+++ b/index.html
@@ -1,340 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TEAMROHITOFFICAL45_LIVE</title>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
+    <meta charset="UTF-8">
+    <title>TEAMROHITOFFICAL45_LIVE</title>
+    <link rel="icon" href="" type="image/png" sizes="250x250">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: #0e0e0e;
-      color: #fff;
-      font-family: 'Poppins', sans-serif;
-      cursor: url('https://cdn-icons-png.flaticon.com/512/892/892634.png') 16 16, auto;
-    }
+    <!-- Shaka Player Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.1/shaka-player.ui.min.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.1/controls.min.css" crossorigin="anonymous">
 
-    header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      height: 70px;
-      background: rgba(14, 14, 14, 0.9);
-      backdrop-filter: blur(12px);
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 0 20px;
-      z-index: 1000;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-    }
+    <style>
+        body {
+            margin: 0;
+            background-color: black;
+        }
 
-    .site-title {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      line-height: 1.1;
-    }
+        /* Shaka Player custom styling */
+        .shaka-overflow-menu {
+            background-color: rgb(41, 41, 163);
+            color: rgb(153, 153, 153);
+        }
 
-    .brand-main {
-      font-family: 'Oswald', sans-serif;
-      font-size: 20px;
-      font-weight: 700;
-      color: gold;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-    }
+        .shaka-overflow-menu button:hover {
+            background-color: rgb(45, 45, 45);
+        }
 
-    .brand-sub {
-      font-size: 12px;
-      font-weight: 600;
-      color: #ffcc00;
-      text-transform: uppercase;
-      letter-spacing: 0.5px;
-    }
+        .shaka-overflow-button-label {
+            color: rgb(245, 245, 245);
+        }
 
-    .material-symbols-outlined {
-      font-size: 30px;
-      color: #fff;
-      cursor: pointer;
-      transition: 0.3s;
-      font-family: 'Material Symbols Outlined';
-    }
+        .shaka-current-selection-span {
+            color: rgb(202, 202, 202);
+        }
 
-    .material-symbols-outlined:hover {
-      color: gold;
-    }
+        .material-icons-round {
+            color: rgb(230, 230, 230);
+        }
 
-    .search-input {
-      position: absolute;
-      top: 100%;
-      right: 20px;
-      margin-top: 5px;
-      padding: 10px 20px;
-      border-radius: 25px;
-      background-color: rgba(255, 255, 255, 0.05);
-      border: 2px solid #ffcc00;
-      color: #fff;
-      outline: none;
-      width: 0;
-      opacity: 0;
-      transition: width 0.4s ease, opacity 0.4s ease;
-      font-size: 14px;
-    }
+        .shaka-settings-menu {
+            background-color: rgb(35, 35, 35);
+            color: rgb(255, 255, 255);
+        }
 
-    .search-input.active {
-      width: 220px;
-      opacity: 1;
-      border-image: linear-gradient(90deg, gold, #ffcc00) 1;
-      animation: borderSearch 2s linear infinite;
-    }
+        .shaka-settings-menu button {
+            color: rgb(255, 255, 255);
+        }
 
-    @keyframes borderSearch {
-      0% { border-image-source: linear-gradient(90deg, gold, #ffcc00); }
-      50% { border-image-source: linear-gradient(270deg, gold, #ffcc00); }
-      100% { border-image-source: linear-gradient(90deg, gold, #ffcc00); }
-    }
+        .shaka-settings-menu button:hover {
+            background-color: rgb(45, 45, 45);
+        }
 
-    .event-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      padding: 90px 20px 20px;
-    }
+        [data-shaka-player-container] {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
 
-    .event {
-      position: relative;
-      width: 360px;
-      background: linear-gradient(145deg, #1e1e1e, #292929);
-      border-radius: 16px;
-      overflow: hidden;
-      padding-bottom: 15px;
-      animation: heartbeat 5s infinite;
-      box-shadow: 0 0 8px rgba(255, 215, 0, 0.15);
-      transition: transform 0.3s, box-shadow 0.3s;
-      border: 1px solid rgba(255, 215, 0, 0.4);
-    }
-
-    .event:hover {
-      box-shadow: 0 0 15px rgba(255, 215, 0, 0.5), 0 0 30px rgba(255, 215, 0, 0.3);
-      transform: scale(1.04);
-    }
-
-    .event img {
-      width: 100%;
-      height: 220px;
-      object-fit: cover;
-      border-bottom: 1px solid rgba(255,255,255,0.1);
-    }
-
-    .event-content {
-      padding: 18px;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-
-    .teams {
-      font-family: 'Oswald', sans-serif;
-      font-size: 24px;
-      font-weight: 700;
-      color: #fff;
-      text-align: center;
-      text-transform: uppercase;
-    }
-
-    .league {
-      font-size: 13px;
-      text-align: center;
-      text-transform: uppercase;
-      background: linear-gradient(90deg, #FFFFFF, white);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      font-weight: 700;
-      letter-spacing: 0.8px;
-      text-shadow: 0 0 6px rgba(255, 215, 0, 0.3);
-      margin-bottom: 6px;
-    }
-
-    .time {
-      font-size: 12px;
-      color: #aaa;
-      text-align: center;
-    }
-
-    .btn-primary {
-      display: inline-block;
-      padding: 9px 18px;
-      background: linear-gradient(90deg, #ffcc00, gold);
-      color: #121212;
-      text-decoration: none;
-      border-radius: 6px;
-      font-weight: bold;
-      box-shadow: 0 0 10px rgba(255, 215, 0, 0.4);
-      text-align: center;
-      transition: 0.3s;
-      margin-top: 5px;
-    }
-
-    .btn-primary:hover {
-      background: linear-gradient(90deg, gold, #ffcc00);
-      box-shadow: 0 0 15px rgba(255, 215, 0, 0.7);
-    }
-
-    .live-badge {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      background: red;
-      color: #fff;
-      padding: 3px 8px;
-      border-radius: 4px;
-      font-size: 12px;
-      font-weight: bold;
-      text-transform: uppercase;
-      box-shadow: 0 0 5px rgba(255,0,0,0.6);
-      z-index: 5;
-      animation: pulseLive 1.5s infinite;
-    }
-
-    @keyframes heartbeat {
-      0%, 100% { transform: scale(1); }
-      25%, 75% { transform: scale(1.02); }
-      50% { transform: scale(1); }
-    }
-
-    @keyframes pulseLive {
-      0%, 100% { box-shadow: 0 0 8px red; }
-      50% { box-shadow: 0 0 18px rgba(255, 0, 0, 0.8); }
-    }
-
-    .loader {
-      position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: #0e0e0e;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 2000;
-      flex-direction: column;
-    }
-
-    .loader:before {
-      content: "";
-      width: 60px;
-      height: 60px;
-      border: 5px solid gold;
-      border-top: 5px solid transparent;
-      border-radius: 50%;
-      animation: spin 1.2s linear infinite;
-      margin-bottom: 15px;
-    }
-
-    .loader-text {
-      color: #fff;
-      font-family: 'Oswald', sans-serif;
-      font-size: 20px;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-      animation: pulse 1.8s infinite;
-    }
-
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-
-    @keyframes pulse {
-      0%, 100% { opacity: 1; }
-      50% { opacity: 0.4; }
-    }
-  </style>
+        video {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
+    <div data-shaka-player-container>
+        <video autoplay muted playsinline data-shaka-player id="video"
+            poster="https://i.ibb.co/CpPYdm25/IMG-20250324-183620-441.jpg">
+        </video>
+    </div>
 
-<div class="loader" id="loader"><div class="loader-text">Loading...</div></div>
+    <script>
+        async function init() {
+            const video = document.getElementById("video");
+            const ui = video.ui;
+            const controls = ui.getControls();
+            const player = controls.getPlayer();
 
-<header>
-  <div class="site-title">
-    <span class="brand-main">TEAMROHITOFFICAL45</span>
-    <span class="brand-sub">FEMCODE</span>
-  </div>
-  <span class="material-symbols-outlined" id="searchToggle">search</span>
-  <input type="text" class="search-input" id="searchInput" placeholder="Search match...">
-</header>
+            // Configure DRM ClearKey (corrected: removed extra comma)
+            player.configure({
+                drm: {
+                    clearKeys: {
+                        "5deb190b1dac28e46c0bdada7668b7de": "ddd2b372702e42b0d2708a70b91dec8d"
+                    }
+                }
+            });
 
-<div class="event-container" id="events"></div>
+            // Customize player UI
+            ui.configure({
+                controlPanelElements: [
+                    "play_pause", "mute", "volume", "spacer", 
+                    "time_and_duration", "quality", "fullscreen", "overflow_menu"
+                ],
+                volumeBarColors: {
+                    base: 'rgba(63, 187, 1, 1)',
+                    level: 'rgb(255, 69, 0)'
+                },
+                seekBarColors: {
+                    base: 'rgb(41, 41, 163)',
+                    buffered: 'rgb(35, 99, 3)',
+                    played: 'rgba(63, 187, 1, 1)'
+                }
+            });
 
-<script>
-  async function fetchAvailableEvents() {
-    try {
-      const response = await fetch("https://github.com/drmlive/fancode-live-events/blob/main/fancode.json");
-      const data = await response.json();
-      window.allEvents = data.matches.filter(event => event.startTime);
-      displayEvents(window.allEvents);
-      document.getElementById("loader").style.display = "none";
-    } catch (error) {
-      console.error("Error fetching events:", error);
-      document.getElementById("loader").innerHTML = "<div class='loader-text'>Failed to load!</div>";
-    }
-  }
+            window.player = player; // for debugging
+            window.ui = ui;
 
-  function displayEvents(events) {
-    const container = document.getElementById("events");
-    container.innerHTML = "";
+            player.addEventListener("error", onPlayerErrorEvent);
+            controls.addEventListener("error", onUIErrorEvent);
 
-    events.forEach(event => {
-      const videoLink = event.adfree_url || event.dai_url;
-      const hasStream = Boolean(videoLink);
-      const isLive = event.status && event.status.toLowerCase() === 'live';
-      const adfreeLink = event.adfree_url;
+            try {
+                await player.load("https://ottb.live.cf.ww.aiv-cdn.net/lhr-nitro/live/clients/dash/enc/bsaaetko8v/out/v1/bd3b0c314fff4bb1ab4693358f3cd2d3/cenc.mpd");
+                console.log("The video has now been loaded!");
+            } catch (error) {
+                onPlayerError(error);
+            }
+        }
 
-      const eventHTML = `
-        <div class="event">
-          ${hasStream && isLive ? `<div class="live-badge">LIVE</div>` : ""}
-          <img src="${event.src}" alt="${event.title}">
-          <div class="event-content">
-            <div class="teams">${event.team_1} vs ${event.team_2}</div>
-            <div class="league">${event.event_name}</div>
-            <div class="time">${event.startTime}</div>
-            ${hasStream 
-              ? `<a href="http://Teamro0045.free.nf/Teamrom3u8plyr.html?id=${videoLink}" target="_blank" class="btn-primary">Watch Now</a>` 
-              : `<span class="btn-primary" style="background:gray;cursor:default;opacity:0.6;">Coming Soon</span>`}
-            ${adfreeLink 
-              ? `<a href="https://Teamro45.fwh.is/Teamrom3u8newplyr.html?id=${adfreeLink}" target="_blank" class="btn-primary">Ad-Free</a>` 
-              : ""}
-          </div>
-        </div>`;
-      container.innerHTML += eventHTML;
-    });
-  }
+        function onPlayerErrorEvent(event) {
+            onPlayerError(event.detail);
+        }
 
-  document.getElementById("searchToggle").addEventListener("click", () => {
-    const input = document.getElementById("searchInput");
-    input.classList.toggle("active");
-    if (input.classList.contains("active")) {
-      input.focus();
-    } else {
-      input.value = "";
-      displayEvents(window.allEvents);
-    }
-  });
+        function onPlayerError(error) {
+            console.error("Error code", error.code, "object", error);
+        }
 
-  document.getElementById("searchInput").addEventListener("input", e => {
-    const searchTerm = e.target.value.toLowerCase();
-    const filtered = window.allEvents.filter(event =>
-      (`${event.team_1} ${event.team_2} ${event.event_name}`.toLowerCase().includes(searchTerm))
-    );
-    displayEvents(filtered);
-  });
+        function onUIErrorEvent(event) {
+            onPlayerError(event.detail);
+        }
 
-  fetchAvailableEvents();
-</script>
+        function initFailed(error) {
+            console.error("Unable to load the Shaka UI library!");
+        }
 
+        document.addEventListener("shaka-ui-loaded", init);
+        document.addEventListener("shaka-ui-load-failed", initFailed);
+
+        // Telegram redirect prompt
+        const message = "JOIN OUR TELEGRAM CHANNEL FOR MORE LIVE STREAM LINKS";
+        if (confirm(message)) {
+            window.location.href = "https://t.me/+e6G48oujQuExOTg1";
+        }
+    </script>
 </body>
 </html>
