--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         const spotlightContainer = document.getElementById('spotlight-container');
         const gridContainer = document.getElementById('matches-grid');
         const DATA_URL = 'https://raw.githubusercontent.com/Jitendra-unatti/fancode/refs/heads/main/data/fancode.json';
-        const PLAY_BASE = 'https://samarthsattani66.github.io/Femcodem3u8plyr/index.html?url='; // 🔥 changed here
+        const PLAY_BASE = 'https://allrounderlive.pages.dev/player?url='; // 🔥 changed here
 
         async function fetchAndRender() {
             try {
