--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         const spotlightContainer = document.getElementById('spotlight-container');
         const gridContainer = document.getElementById('matches-grid');
         const DATA_URL = 'https://raw.githubusercontent.com/Jitendra-unatti/fancode/refs/heads/main/data/fancode.json';
-        const PLAY_BASE = 'https://binge-sports.pages.dev/fancode/match.html?id=';
+        const PLAY_BASE = 'https://teamrofemcodeplyr2.pages.dev/match.html';
 
         async function fetchAndRender() {
             try {
