--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 
     <header class="text-center py-16 px-4 relative z-10">
         <h1 class="text-5xl md:text-7xl font-black tracking-tighter text-transparent bg-clip-text bg-gradient-to-r from-sky-400 via-purple-400 to-amber-400 mb-4">
-            ALLROUNDER
+            TEAMROHITOFFICIAL45 
         </h1>
         <p class="text-slate-300 text-lg mt-3 max-w-2xl mx-auto font-medium">
            Watch all FanCode matches for free in HD quality 🔥
@@ -528,7 +528,7 @@
         const spotlightContainer = document.getElementById('spotlight-container');
         const gridContainer = document.getElementById('matches-grid');
         const DATA_URL = 'https://raw.githubusercontent.com/Jitendra-unatti/fancode/refs/heads/main/data/fancode.json';
-        const PLAY_BASE = 'fcplay.html';
+        const PLAY_BASE = 'https://teamrofemcodeplyr2.pages.dev/match.html';
 
         // Format language names for better display
         function formatLanguage(lang) {
